# grok-register

./: .gitignore  AGENTS.md  LICENSE  PACKAGED_README.md  README.md  README.zh.md  _fix_browser_leak.py  cf_mail_debug.py  config.example.json  cpa_export.py  cpa_to_sub2api.py  grok_register_ttk.py  launch_gui.ps1  mise.toml  pyproject.toml  register_cli.py  verify_config_safe.py
cpa_xai/: browser_confirm.py
docs/: PACKAGED_README.md
grok_register/: __init__.py  app.py  browser_adapter.py  cf_mail_debug.py  cli.py  cpa_export.py  cpa_to_sub2api.py  exchange_mail.py  lifecycle.py  paths.py  proxyutil.py  reg_stats.py  sso_build.py  tab_pool.py
grok_register/cpa_xai/: browser_confirm.py  mint.py  protocol_mint.py  proxyutil.py
grok_register/do_egress/: __init__.py  (+8 more)
scripts/: _analyze_reg_stats_once.py  _update_worker_domains.py  backfill_cpa_xai_from_accounts.py  export_cpa_xai_from_grok_auth.py  launch_gui.ps1  optimization_checks.py  probe_cpa_batch.py  refresh_cpa_batch.py  run_cli_manual_once.ps1  setup_cf_email_domain.py  verify_config_safe.ps1  verify_config_safe.py
sso_to_cliproxy_tool/: .env.example  README.md  refresh_build_auth.py
tests/: test_bot_flag_allow.py  test_browser_adapter_e2e.py  test_browser_tls_isolation.py  test_cloudflare_admin_api.py  test_do_egress.py  test_email_blocked_and_pace.py  test_exchange_mail.py  test_grok2api_remote_pool.py  test_lifecycle.py  test_playwright_thread_local.py  test_reg_stats.py  test_shadow_dom_adapter.py  test_sso_build.py  test_turnstile_chain.py  test_turnstile_patient.py
turnstilePatch/: manifest.json
(+3 files in other folders)
